--- a/src/main/resources/templates/student/student-item.html
+++ b/src/main/resources/templates/student/student-item.html
@@ -12,10 +12,10 @@
     <td th:text="${item?.getFatherName()}">Mark</td>
     <td th:text="${item?.getMotherName()}">Mark</td>
     <td>
-<!--        <a th:href="${@webLinkFactory.updateTenant(item?.getId())}" class="btn btn-primary a-btn-slide-text hover-button">-->
-<!--            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>-->
-<!--            <span><strong>Edit</strong></span>-->
-<!--        </a>-->
+        <a th:href="${@webLinkFactory.updateStudent(item?.getId())}" class="btn btn-primary a-btn-slide-text hover-button">
+            <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+            <span><strong>Edit</strong></span>
+        </a>
 <!--        <a th:href="${@webLinkFactory.deleteTenant(item?.getId())}" class="btn btn-primary a-btn-slide-text hover-button">-->
 <!--            <span class="glyphicon  glyphicon-trash" aria-hidden="true"></span>-->
 <!--            <span><strong>Delete</strong></span>-->
