--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -5,18 +5,30 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"/>
-    <script type="text/javascript" th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
-    <script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <script type="text/javascript" th:src="@{/js/app.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/app.css}"/>
 </head>
 <body>
+<div class="wrapper">
+    <!--Sidebar menu-->
+    <th:block th:replace="fragments/sidebar :: nav"/>
 
-<th:block th:replace="fragments/header :: header"/>
-<div class="container">
-    <th:block layout:fragment="content"/>
+    <!--main content-->
+    <div class="main">
+        <th:block th:replace="fragments/header :: header"/>
+
+        <main class="content">
+            <div class="container-fluid p-0">
+                <div class="container">
+                    <th:block layout:fragment="content"/>
+                </div>
+            </div>
+        </main>
+
+        <!--footer menu-->
+        <th:block th:replace="fragments/footer :: footer"/>
+
+    </div>
 </div>
-<th:block th:replace="fragments/footer :: footer"/>
 </body>
 </html>
