--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,8 +22,10 @@
 
         <div>
             <select id="locales">
-                <option value="en" th:selected="${@webLinkFactory.getLanguage()}=='en'" th:text="#{app.lang.english}"></option>
-                <option value="bn" th:selected="${@webLinkFactory.getLanguage()}=='bn'" th:text="#{app.lang.bangla}"></option>
+                <option value="en" th:selected="${@webLinkFactory.getLanguage()}=='en'"
+                        th:text="#{app.lang.english}"></option>
+                <option value="bn" th:selected="${@webLinkFactory.getLanguage()}=='bn'"
+                        th:text="#{app.lang.bangla}"></option>
             </select>
         </div>
 
