--- a/src/main/resources/templates/fragments/layout2.html
+++ b/src/main/resources/templates/fragments/layout2.html
@@ -18,7 +18,7 @@
     <!--main content-->
     <div class="main">
         <th:block th:replace="fragments/header :: header"/>
-        this 1st layout.
+        this 2nd layout.
         <main class="content">
             <div class="container-fluid p-0">
                 <div class="container">
