--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org"
-      layout:decorate="fragments/layout">
+      layout:decorate="${@webTemplateResolver.getLayout()}">
 <head>
     <title>Students</title>
 </head>
 <body>
 <div layout:fragment="content" th:remove="tag">
-        <a th:href="${@webLinkFactory.addStudent()}" class="btn btn-primary btn-lg btn-block">
-            <span th:text="#{app.student.add}"></span> </a>
+    <a th:href="${@webLinkFactory.addStudent()}" class="btn btn-primary btn-lg btn-block">
+        <span th:text="#{app.student.add}"></span> </a>
     <table class="table table-hover table-bordered table-striped">
         <thead>
         <tr>
             <th>#</th>
-            <th><span th:text="#{app.student.full.name}"></span> </th>
+            <th><span th:text="#{app.student.full.name}"></span></th>
             <th><span th:text="#{app.student.father.name}"></span></th>
             <th><span th:text="#{app.student.mother.name}"></span></th>
             <th><span th:text="#{app.student.action}"></span></th>
